move fixed shipping cost to order
